# visit-scheduler

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
.github/workflows/: config.yml
src/: pytest.ini
src/frontend/: urls.py
src/frontend/templates/: base.html
src/visits/: asgi.py  settings.py  urls.py  wsgi.py
