[tool.poetry]
name = "visit scheduler"
version = "0.1.0"
description = ""
authors = ["gonczor <wiktor.gonczaronek@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.3"
djangorestframework-camel-case = "^1.3.0"
django-environ = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
